# hyprgui

./: Cargo.toml  hyprctl.txt  hyprgui.desktop  readme.md
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: rust.yml  typos.yml
hyprland-parser/: Cargo.toml
hyprland-parser/src/: lib.rs
src/: config_gui.rs  gui.rs  main.rs  modules.rs  widgets.rs
