[package]
name = "hyprlandgui"
version = "0.1.0"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for configuring Hyprland!"
repository = "https://github.com/nnyyxxxx/hyprlandgui.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "config",
]
categories = ["gui"]
edition = "2021"

[dependencies]
