[package]
name = "hyprgui"
version = "0.1.9"
authors = ["Nyx <nnyyxxxx@protonmail.com>", "Adam Perkowski <adas1per@protonmail.com>"]
license = "GPL-2.0"
description = "GUI for configuring Hyprland!"
repository = "https://github.com/hyprutils/hyprgui.git"
readme = "readme.md"
keywords = [
    "gui",
    "hyprland",
    "wayland",
    "config",
]
categories = ["gui"]
edition = "2021"

[dependencies]
gtk = { version = "0.9.2", package = "gtk4" }
hyprparser = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
